--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1> "Hello World!!" </h1>
+    <div class="container">
+        <div class="item">
+            Hello World!!
+        </div>
+        <div class="item">
+            I'm Alive...
+        </div>
+    </div>
 </body>
 </html>
